# relbot

./: .gitignore  Dockerfile  LICENSE.txt  README.md  README.mkd  config.ini.example  pyproject.toml  requirements.txt
.github/workflows/: build-docker-image.yml
relbot/: bn_plugin.py  chat_plugin.py  github_chat_monitor.py  github_events_api_client.py  github_events_feed_plugin.py  github_integration.py  github_issues_matcher.py  github_issues_resolver.py  ircformat.py  jokes.py  log.py  redflare_client.py  urbandictionary_client.py  util.py  wikipedia_client.py
