[tool.poetry]
name = "relbot"
version = "0.0.1"
description = ""
authors = ["TheAssassin <theassassin@assassinate-you.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
requests = {extras = ["socks"], version = "^2.28.1"}
irc3 = "^1.1.8"
feedparser = "^6.0.10"
ircmessage = "^0.1.1"
lxml = "^4.9.1"
cssselect = "^1.2.0"
beautifulsoup4 = "^4.11.1"
aiocron = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
