[tool.poetry]
name = "relbot"
# version needed for installation, it's not really used
version = "0.0.1"
description = ""
authors = ["TheAssassin <theassassin@assassinate-you.net>"]
license = "MIT"
packages = [
    { include = "relbot" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = {extras = ["socks"], version = "^2.28.1"}
irc3 = "^1.1.8"
feedparser = "^6.0.10"
lxml = "^5"
cssselect = "^1.2.0"
beautifulsoup4 = "^4.11.1"
aiocron = "^1.8"

[poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
